issue #1, fix mdToast show make the app flickering

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,6 +5,7 @@
  * 
  */
 html {
+  max-height: 448px;
 }
 
 .overlay {
